Fix code style warnings